--- a/inquiry/index.html
+++ b/inquiry/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+<meta name="description" content="">
 <meta name="keywords" content="">
 <title>お問い合わせ｜SAMPLE SITE</title>
 <link rel="profile" href="http://gmpg.org/xfn/11/" />
