--- a/inquiry/index.html
+++ b/inquiry/index.html
@@ -17,7 +17,7 @@
 <link rel="stylesheet" href="../asset/css/content.css" type="text/css" media="screen, projection" />
 <link rel="stylesheet" href="../asset/css/skeleton.css" type="text/css" media="screen, projection" />
 <link rel="stylesheet" href="../asset/css/responsive.css" type="text/css" media="screen, projection" />
-<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Iceland">
+<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Iceland" type="text/css" media="screen, projection" />
 <script type="text/javascript" src="../asset/javascripts/jquery.js"></script>
 <script type="text/javascript" src="../asset/javascripts/jquery.plugin.js"></script>
 <script type="text/javascript" src="../asset/javascripts/kanipunch.js"></script>
