--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 	<!--/Navigation--> 
 	
 	<!-- MainImage -->
-	<div id="main_image" class="row sixteen columns"><img class="scale-with-grid round" src="asset/images/main_img.gif" alt="" /></div>
+	<div id="main_image" class="row sixteen columns"><img class="scale-with-grid round" src="asset/images/main_img.jpg" alt="" /></div>
 	<!-- /MainImage --> 
 	
 	<!-- Sidebar -->
