--- a/service/index.html
+++ b/service/index.html
@@ -225,7 +225,7 @@
 			<div id="include_twitter">
 				<div class="clearfix">
 					<h3><img src="../asset/images/twitter_logo.png" alt="twitter"></h3>
-					<div><a href="https://twitter.com/twj//" target="_blank"><img src="../asset/images/twitter_btn.png" alt="FOLLOW ME"></a></div>
+					<div><a href="https://twitter.com/modx_ja/" target="_blank"><img src="../asset/images/twitter_btn.png" alt="FOLLOW ME"></a></div>
 				</div>
 				<div id="twitter_inner">
 					<div class="tweet"></div>
