--- a/product/index.html
+++ b/product/index.html
@@ -32,13 +32,12 @@
 	<!-- Header -->
 	<header class="sixteen columns">
 		<div class="inner">
-			<div id="site-title" class="graphic"><a href="../index.html" title="responsive sample">responsive sample</a></div>
-			<span class="site-desc graphic"></span>
+			<div id="site-title" class="graphic"><a href="../index.html">MODX</a></div>
 			<ul class="header_inquiry clearfix">
 				<li>
-					<a href="tel:0123456789" title="お電話でのご相談">
+					<a href="tel:0123456789">
 						<span class="icon_img">
-							<span class="lsf" title="phone">&#xe100;</span>
+							<span class="lsf">&#xe100;</span>
 						</span>
 						<span class="icon_label">
 							<span class="title">お電話でのご相談</span>
@@ -48,8 +47,8 @@
 					</a>
 				</li>
 				<li>
-					<a href="../inquiry/" title="メールでのご相談">
-						<span class="icon_img"><span class="lsf" title="mail">&#xe08a;</span></span>
+					<a href="../inquiry/">
+						<span class="icon_img"><span class="lsf">&#xe08a;</span></span>
 						<span class="icon_label"><span class="title">メールでのご相談</span><div>お問い合わせフォーム</div></span>
 					</a>
 				</li>
@@ -167,7 +166,7 @@
 			</div>
 			<ul class="clearfix">
 				<li id="inquiry_tel">
-					<a href="tel:0123456789" class="clearfix" title="お電話でのご相談">
+					<a href="tel:0123456789" class="clearfix">
 						<span class="icon_img">
 							<span class="lsf">&#xe100;</span>
 						</span>
@@ -179,7 +178,7 @@
 					</a>
 				</li>
 				<li id="inquiry_mail">
-					<a href="#" class="clearfix" title="メールでのご相談">
+					<a href="../inquiry/" class="clearfix">
 						<span class="icon_img">
 							<span class="lsf">&#xe08a;</span>
 						</span>
@@ -235,7 +234,6 @@
 		<aside class="banner clearfix">
 			<ul>
 				<li><a href="http://modx.jp/blog.html" target="_blank"><img src="../asset/images/sample_banner03.gif" alt="Blog"></a></li>
-				<li><a href="https://twitter.com/modx_ja" target="_blank"><img src="../asset/images/sample_banner04.gif" alt="Follow us on Twitter"></a></li>
 			</ul>
 		</aside>
 	</div>
