--- a/company/index.html
+++ b/company/index.html
@@ -32,13 +32,12 @@
 	<!-- Header -->
 	<header class="sixteen columns">
 		<div class="inner">
-			<div id="site-title" class="graphic"><a href="../index.html" title="responsive sample">responsive sample</a></div>
-			<span class="site-desc graphic"></span>
+			<div id="site-title" class="graphic"><a href="../index.html">MODX</a></div>
 			<ul class="header_inquiry clearfix">
 				<li>
-					<a href="tel:0123456789" title="お電話でのご相談">
+					<a href="tel:0123456789">
 						<span class="icon_img">
-							<span class="lsf" title="phone">&#xe100;</span>
+							<span class="lsf">&#xe100;</span>
 						</span>
 						<span class="icon_label">
 							<span class="title">お電話でのご相談</span>
@@ -48,8 +47,8 @@
 					</a>
 				</li>
 				<li>
-					<a href="../inquiry/" title="メールでのご相談">
-						<span class="icon_img"><span class="lsf" title="mail">&#xe08a;</span></span>
+					<a href="../inquiry/">
+						<span class="icon_img"><span class="lsf">&#xe08a;</span></span>
 						<span class="icon_label"><span class="title">メールでのご相談</span><div>お問い合わせフォーム</div></span>
 					</a>
 				</li>
@@ -219,60 +218,6 @@
 						</table>
 					</div>
 				</article>
-				<article>
-					<h2><span>テキストが入りますテキストが入ります</span></h2>
-					<div class="inner_box">
-						<table class="table_style01" summary="会社概要">
-							<tbody>
-								<tr>
-									<th>社名</th>
-									<td>○○○○株式会社</td>
-								</tr>
-								<tr>
-									<th>代表取締役</th>
-									<td>山田　太郎</td>
-								</tr>
-								<tr>
-									<th>設立年月日</th>
-									<td>2000年1月1日</td>
-								</tr>
-								<tr>
-									<th>資本金</th>
-									<td>1,000万円</td>
-								</tr>
-								<tr>
-									<th>主な事業内容</th>
-									<td>事業内容が入ります<br />
-										事業内容が入ります<br />
-										事業内容が入ります<br />
-										事業内容が入ります<br />
-										事業内容が入ります</td>
-								</tr>
-								<tr>
-									<th>所在地</th>
-									<td>〒123-4567<br />
-										東京都○○区○○1-2-3 ○○ビル4Ｆ</td>
-								</tr>
-								<tr>
-									<th>電話番号</th>
-									<td>01-2345-6789</td>
-								</tr>
-								<tr>
-									<th>ファックス</th>
-									<td>01-2345-6789</td>
-								</tr>
-								<tr>
-									<th>URL</th>
-									<td>http://www.sample.com/</td>
-								</tr>
-								<tr>
-									<th>E-Mail</th>
-									<td>info@sample.com</td>
-								</tr>
-							</tbody>
-						</table>
-					</div>
-				</article>
 			</div>
 		</div>
 		<!-- /Article --> 
@@ -285,7 +230,7 @@
 			</div>
 			<ul class="clearfix">
 				<li id="inquiry_tel">
-					<a href="tel:0123456789" class="clearfix" title="お電話でのご相談">
+					<a href="tel:0123456789" class="clearfix">
 						<span class="icon_img">
 							<span class="lsf">&#xe100;</span>
 						</span>
@@ -297,7 +242,7 @@
 					</a>
 				</li>
 				<li id="inquiry_mail">
-					<a href="#" class="clearfix" title="メールでのご相談">
+					<a href="../inquiry" class="clearfix">
 						<span class="icon_img">
 							<span class="lsf">&#xe08a;</span>
 						</span>
@@ -353,7 +298,6 @@
 		<aside class="banner clearfix">
 			<ul>
 				<li><a href="http://modx.jp/blog.html" target="_blank"><img src="../asset/images/sample_banner03.gif" alt="Blog"></a></li>
-				<li><a href="https://twitter.com/modx_ja" target="_blank"><img src="../asset/images/sample_banner04.gif" alt="Follow us on Twitter"></a></li>
 			</ul>
 		</aside>
 	</div>
