--- a/index.html
+++ b/index.html
@@ -32,13 +32,12 @@
 	<!-- Header -->
 	<header class="sixteen columns">
 		<div class="inner">
-			<h1 id="site-title" class="graphic"><a href="./index.html" title="responsive sample">responsive sample</a></h1>
-			<span class="site-desc graphic"></span>
+			<h1 id="site-title" class="graphic"><a href="./index.html" title="MODX">MODX</a></h1>
 			<ul class="header_inquiry clearfix">
 				<li>
-					<a href="tel:0123456789" title="お電話でのご相談">
+					<a href="tel:0123456789">
 						<span class="icon_img">
-							<span class="lsf" title="phone">&#xe100;</span>
+							<span class="lsf">&#xe100;</span>
 						</span>
 						<span class="icon_label">
 							<span class="title">お電話でのご相談</span>
@@ -48,8 +47,8 @@
 					</a>
 				</li>
 				<li>
-					<a href="./inquiry/" title="メールでのご相談">
-						<span class="icon_img"><span class="lsf" title="mail">&#xe08a;</span></span>
+					<a href="./inquiry/">
+						<span class="icon_img"><span class="lsf">&#xe08a;</span></span>
 						<span class="icon_label"><span class="title">メールでのご相談</span><div>お問い合わせフォーム</div></span>
 					</a>
 				</li>
@@ -197,7 +196,7 @@
 			</div>
 			<ul class="clearfix">
 				<li id="inquiry_tel">
-					<a href="tel:0123456789" class="clearfix" title="お電話でのご相談">
+					<a href="tel:0123456789" class="clearfix">
 						<span class="icon_img">
 							<span class="lsf">&#xe100;</span>
 						</span>
@@ -209,7 +208,7 @@
 					</a>
 				</li>
 				<li id="inquiry_mail">
-					<a href="#" class="clearfix" title="メールでのご相談">
+					<a href="./inquiry/" class="clearfix">
 						<span class="icon_img"><span class="lsf">&#xe08a;</span></span>
 						<span class="icon_label"> <span class="title">メールでのご相談</span><div>お問い合わせフォーム</div></span>
 					</a>
@@ -261,7 +260,6 @@
 		<aside class="banner clearfix">
 			<ul>
 				<li><a href="http://modx.jp/blog.html" target="_blank"><img src="asset/images/sample_banner03.gif" alt="Blog"></a></li>
-				<li><a href="https://twitter.com/modx_ja" target="_blank"><img src="asset/images/sample_banner04.gif" alt="Follow us on Twitter"></a></li>
 			</ul>
 		</aside>
 	</div>
@@ -300,6 +298,7 @@
 			<p class="status sixteen columns">Mem : 57.45 KB, MySQL: 0s, 0 request(s), PHP: 0.0004 s, total: 0.0004 s, document retrieved from bypass_cache.</p>
 			<script type="text/javascript" src="asset/javascripts/jquery.formalize.min.js"></script>
 		</div>
+		<script type="text/javascript" src="../asset/javascripts/jquery.formalize.min.js"></script> 
 	</footer>
 	<!--/Footer--> 
 	
