--- a/product/index.html
+++ b/product/index.html
@@ -32,26 +32,10 @@
 	<!-- Header -->
 	<header class="sixteen columns">
 		<div class="inner">
-			<div id="site-title" class="graphic"><a href="../index.html">MODX</a></div>
-			<ul class="header_inquiry clearfix">
-				<li>
-					<a href="tel:0123456789">
-						<span class="icon_img">
-							<span class="lsf">&#xe100;</span>
-						</span>
-						<span class="icon_label">
-							<span class="title">お電話でのご相談</span>
-							<span class="number">0120-345-678</span>
-							<span class="opentime">受付時間：月～金　9:00～18:00</span>
-						</span>
-					</a>
-				</li>
-				<li>
-					<a href="../inquiry/">
-						<span class="icon_img"><span class="lsf">&#xe08a;</span></span>
-						<span class="icon_label"><span class="title">メールでのご相談</span><div>お問い合わせフォーム</div></span>
-					</a>
-				</li>
+			<div id="site-title"><a href="../index.html">MODX</a></div>
+			<ul class="clearfix">
+				<li><a href="tel:0123456789"><span class="icon_img"><span class="lsf">&#xe100;</span></span><span class="icon_label"><span class="title">お電話でのご相談</span><span class="number">0120-345-678</span><span class="opentime">受付時間：月～金　9:00～18:00</span></span></a></li>
+				<li><a href="../inquiry/"><span class="icon_img"><span class="lsf">&#xe08a;</span></span><span class="icon_label"><span class="title">メールでのご相談</span><div>お問い合わせフォーム</div></span></a></li>
 			</ul>
 		</div>
 	</header>
@@ -165,28 +149,8 @@
 				<p>サービス内容についてのお問い合わせ・ご相談は電話とメールにて承っております</p>
 			</div>
 			<ul class="clearfix">
-				<li id="inquiry_tel">
-					<a href="tel:0123456789" class="clearfix">
-						<span class="icon_img">
-							<span class="lsf">&#xe100;</span>
-						</span>
-						<span class="icon_label">
-							<span class="title">お電話でのご相談</span>
-							<span class="number">0120-345-678</span>
-							<span class="opentime">受付時間：月～金　9:00～18:00</span>
-						</span>
-					</a>
-				</li>
-				<li id="inquiry_mail">
-					<a href="../inquiry/" class="clearfix">
-						<span class="icon_img">
-							<span class="lsf">&#xe08a;</span>
-						</span>
-						<span class="icon_label">
-							<span class="title">メールでのご相談</span><div>お問い合わせフォーム</div>
-						</span>
-					</a>
-				</li>
+				<li id="inquiry_tel"><a href="tel:0123456789" class="clearfix"><span class="icon_img"><span class="lsf">&#xe100;</span></span><span class="icon_label"><span class="title">お電話でのご相談</span><span class="number">0120-345-678</span><span class="opentime">受付時間：月～金　9:00～18:00</span></span></a></li>
+				<li id="inquiry_mail"><a href="../inquiry/" class="clearfix"><span class="icon_img"><span class="lsf">&#xe08a;</span></span><span class="icon_label"><span class="title">メールでのご相談</span><div>お問い合わせフォーム</div></span></a></li>
 			</ul>
 		</div>
 		<!-- /Inquiry -->
@@ -223,12 +187,8 @@
 		</section>
 		<aside class="free-space clearfix">
 			<ul>
-				<li class="clearfix"> <img src="../asset/images/free-space_sample2-2.jpg" alt="公式ドキュメント">
-					<div><strong>公式ドキュメント</strong><span>400以上のページや週刊成長と、MODxのドキュメントには、それがために使用されるものでない。オープンソースプロジェクトでは、ドキュメントを真剣に考えて取得したときに何が起こるかを参照してください。</span></div>
-				</li>
-				<li class="clearfix"> <img src="../asset/images/free-space_sample2-3.jpg" alt="MODXソリューション">
-					<div><strong>MODXソリューション</strong><span>MODxのサイトのショーケースで作られたが、どれだけ柔軟MODXが本当にで単なる覗き見を提供しています。私たちのソリューションプロファイルはMODxのユーザーとそのプロジェクトのプロセスと解析および紹介にあなたの洞察力を与える。</span></div>
-				</li>
+				<li class="clearfix"><img src="../asset/images/free-space_sample2-2.jpg" alt="公式ドキュメント"><div><strong>公式ドキュメント</strong><span>400以上のページや週刊成長と、MODxのドキュメントには、それがために使用されるものでない。オープンソースプロジェクトでは、ドキュメントを真剣に考えて取得したときに何が起こるかを参照してください。</span></div></li>
+				<li class="clearfix"><img src="../asset/images/free-space_sample2-3.jpg" alt="MODXソリューション"><div><strong>MODXソリューション</strong><span>MODxのサイトのショーケースで作られたが、どれだけ柔軟MODXが本当にで単なる覗き見を提供しています。私たちのソリューションプロファイルはMODxのユーザーとそのプロジェクトのプロセスと解析および紹介にあなたの洞察力を与える。</span></div></li>
 			</ul>
 		</aside>
 		<aside class="banner clearfix">
@@ -247,9 +207,7 @@
 			<div class="clearfix sixteen columns">
 				<dl>
 					<dt>KANIPUNCH</dt>
-					<dd>〒000-0000　住所をここに入力してください住所をここに入力してください<br />
-						TEL : 000-000-0000　FAX : 000-000-0000<br>
-						URL : <a href="http://www.kanipunch.com/" target="_blank">http://www.kanipunch.com/</a></dd>
+					<dd>〒000-0000　住所をここに入力してください住所をここに入力してください<br />TEL : 000-000-0000　FAX : 000-000-0000<br>URL : <a href="http://www.kanipunch.com/" target="_blank">http://www.kanipunch.com/</a></dd>
 				</dl>
 				<ul id="sns_icon" class="clearfix">
 					<li><a href="https://twitter.com/" title="Twitter"><span class="lsf">&#xe12f;</span></a></li>
