--- a/company/index.html
+++ b/company/index.html
@@ -3,8 +3,6 @@
 <head>
 <meta charset="UTF-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-<meta name="description" content="">
-<meta name="keywords" content="">
 <title>企業情報｜SAMPLE SITE</title>
 <link rel="profile" href="http://gmpg.org/xfn/11/" />
 <link rel="canonical" href="../index.html" />
@@ -77,29 +75,29 @@
 	<!-- /MainImage --> 
 	
 	<!-- Sidebar -->
-	<div id="sidebar" class="five columns" role="complementary">
+	<div id="sidebar" class="five columns">
 		<ul>
 			<li class="widget-container">
 				<ul>
-					<li class="menu_item current"><a href="../index.html">HOME</a></li>
-					<li class="menu_item"><a href="../company/">企業情報</a>
+					<li class="menu_item"><a href="../index.html">HOME</a></li>
+					<li class="menu_item current"><a href="../company/">企業情報</a>
 						<ul class="menu_item children">
-							<li class="menu_item"><a href="../company/">企業情報01</a></li>
-							<li class="menu_item"><a href="../company/">企業情報02</a></li>
-							<li class="menu_item"><a href="../company/">企業情報03</a></li>
+							<li><a href="../company/">企業情報01</a></li>
+							<li><a href="../company/">企業情報02</a></li>
+							<li><a href="../company/">企業情報03</a></li>
 						</ul>
 					</li>
 					<li class="menu_item"><a href="../service/">事業案内</a>
 						<ul class="children">
-							<li class="menu_item"><a href="../service/">事業案内01</a></li>
-							<li class="menu_item"><a href="../service/">事業案内02</a></li>
-							<li class="menu_item"><a href="../service/">事業案内03</a></li>
+							<li><a href="../service/">事業案内01</a></li>
+							<li><a href="../service/">事業案内02</a></li>
+							<li><a href="../service/">事業案内03</a></li>
 						</ul>
 					</li>
 					<li class="menu_item"><a href="../product/">製品情報</a>
 						<ul class="children">
-							<li class="menu_item"><a href="../product/">製品情報01</a></li>
-							<li class="menu_item"><a href="../product/">製品情報02</a></li>
+							<li><a href="../product/">製品情報01</a></li>
+							<li><a href="../product/">製品情報02</a></li>
 						</ul>
 					</li>
 					<li class="menu_item"><a href="../inquiry/">お問い合わせ</a></li>
