--- a/index.html
+++ b/index.html
@@ -3,11 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-<meta name="description" content="">
-<meta name="keywords" content="">
 <title>SAMPLE SITE</title>
-<link rel="profile" href="http://gmpg.org/xfn/11/" />
-<link rel="canonical" href="./index.html" />
 <!--[if lt IE 9]><script type="text/javascript" src="asset/javascripts/html5shiv.js"></script><script type="text/javascript" src="asset/javascripts/css3-mediaqueries.js"></script><![endif]-->
 <!--[if lt IE 10]><script type="text/javascript" src="asset/javascripts/PIE.js"></script><![endif]-->
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
@@ -77,29 +73,29 @@
 	<!-- /MainImage --> 
 	
 	<!-- Sidebar -->
-	<div id="sidebar" class="five columns" role="complementary">
+	<div id="sidebar" class="five columns">
 		<ul>
 			<li class="widget-container">
 				<ul>
 					<li class="menu_item current"><a href="./index.html">HOME</a></li>
 					<li class="menu_item"><a href="./company/">企業情報</a>
 						<ul class="menu_item children">
-							<li class="menu_item"><a href="./company/">企業情報01</a></li>
-							<li class="menu_item"><a href="./company/">企業情報02</a></li>
-							<li class="menu_item"><a href="./company/">企業情報03</a></li>
+							<li><a href="./company/">企業情報01</a></li>
+							<li><a href="./company/">企業情報02</a></li>
+							<li><a href="./company/">企業情報03</a></li>
 						</ul>
 					</li>
 					<li class="menu_item"><a href="./service/">事業案内</a>
 						<ul class="children">
-							<li class="menu_item"><a href="./service/">事業案内01</a></li>
-							<li class="menu_item"><a href="./service/">事業案内02</a></li>
-							<li class="menu_item"><a href="./service/">事業案内03</a></li>
+							<li><a href="./service/">事業案内01</a></li>
+							<li><a href="./service/">事業案内02</a></li>
+							<li><a href="./service/">事業案内03</a></li>
 						</ul>
 					</li>
 					<li class="menu_item"><a href="./product/">製品情報</a>
 						<ul class="children">
-							<li class="menu_item"><a href="./product/">製品情報01</a></li>
-							<li class="menu_item"><a href="./product/">製品情報02</a></li>
+							<li><a href="./product/">製品情報01</a></li>
+							<li><a href="./product/">製品情報02</a></li>
 						</ul>
 					</li>
 					<li class="menu_item"><a href="./inquiry/">お問い合わせ</a></li>
