--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 <link rel="shortcut icon" href="asset/images/favicon.ico">
 <link rel="stylesheet" href="asset/css/base.css" type="text/css" media="screen, projection" />
-<link rel="stylesheet" href="asset/css/custom.css" type="text/css" media="screen, projection" />
 <link rel="stylesheet" href="asset/css/content.css" type="text/css" media="screen, projection" />
+<link rel="stylesheet" href="asset/css/custom.css" type="text/css" media="screen, projection" />
 <link rel="stylesheet" href="asset/css/skeleton.css" type="text/css" media="screen, projection" />
 <link rel="stylesheet" href="asset/css/responsive.css" type="text/css" media="screen, projection" />
 <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Iceland" type="text/css" media="screen, projection" />
@@ -18,7 +18,7 @@
 <script type="text/javascript" src="asset/javascripts/jquery.plugin.js"></script>
 <script type="text/javascript" src="asset/javascripts/kanipunch.js"></script>
 </head>
-<body class="home">
+<body>
 
 <!-- Wrap -->
 <div id="wrap" class="container"> 
