--- a/inquiry/index.html
+++ b/inquiry/index.html
@@ -11,8 +11,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 <link rel="shortcut icon" href="../asset/images/favicon.ico">
 <link rel="stylesheet" href="../asset/css/base.css" type="text/css" media="screen, projection" />
-<link rel="stylesheet" href="../asset/css/custom.css" type="text/css" media="screen, projection" />
 <link rel="stylesheet" href="../asset/css/content.css" type="text/css" media="screen, projection" />
+<link rel="stylesheet" href="../asset/css/custom.css" type="text/css" media="screen, projection" />
 <link rel="stylesheet" href="../asset/css/skeleton.css" type="text/css" media="screen, projection" />
 <link rel="stylesheet" href="../asset/css/responsive.css" type="text/css" media="screen, projection" />
 <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Iceland" type="text/css" media="screen, projection" />
@@ -20,7 +20,7 @@
 <script type="text/javascript" src="../asset/javascripts/jquery.plugin.js"></script>
 <script type="text/javascript" src="../asset/javascripts/kanipunch.js"></script>
 </head>
-<body class="inquiry">
+<body>
 
 <!-- Wrap -->
 <div id="wrap" class="container"> 
