--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
 			<p class="status width_a columns">Mem : 57.45 KB, MySQL: 0s, 0 request(s), PHP: 0.0004 s, total: 0.0004 s, document retrieved from bypass_cache.</p>
 			<script type="text/javascript" src="assets/templates/kanipunch/javascripts/jquery.formalize.min.js"></script>
 		</div>
-		<script type="text/javascript" src="../assets/templates/kanipunch/javascripts/jquery.formalize.min.js"></script> 
+		<script type="text/javascript" src="assets/templates/kanipunch/javascripts/jquery.formalize.min.js"></script> 
 	</footer>
 	<!--/Footer--> 
 	
