--- a/product/index.html
+++ b/product/index.html
@@ -135,6 +135,7 @@
 					<div class="one_third"><img title="sample_img01" src="../assets/templates/kanipunch/images/sample_img05.gif" alt="sample_img01" width="184" /><br />商品名商品名商品名</div>
 					<div class="one_third"><img title="sample_img01" src="../assets/templates/kanipunch/images/sample_img05.gif" alt="sample_img01" width="184" /><br />商品名商品名商品名</div>
 					<div class="one_third last"><img title="sample_img01" src="../assets/templates/kanipunch/images/sample_img05.gif" alt="sample_img01" width="184" /><br />商品名商品名商品名</div>
+					</div>
 				</article>
 			</div>
 		</div>
