--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 	<!--/Navigation--> 
 	
 	<!-- MainImage -->
-	<div id="main_image" class="row width_a columns"><img class="scale-with-grid round" src="assets/templates/kanipunch/images/main_img.jpg" alt="" /></div>
+	<div id="main_image" class="row width_a columns"><img src="assets/templates/kanipunch/images/main_img.jpg" alt="" /></div>
 	<!-- /MainImage --> 
 	
 	<!-- Sidebar -->
