--- a/service/index.html
+++ b/service/index.html
@@ -30,7 +30,7 @@
 	<!-- Header -->
 	<header class="width_a columns">
 		<div class="inner">
-			<div id="site-title"><a href="../index.html">MODX</a></div>
+			<h1 id="site-title"><a href="../index.html">MODX</a></h1>
 			<ul class="clearfix">
 				<li><a href="tel:0123456789"><span class="icon_img"><span class="lsf">&#xe100;</span></span><span class="icon_label"><span class="title">お電話でのご相談</span><span class="number">0120-345-678</span><span class="opentime">受付時間：月～金　9:00～18:00</span></span></a></li>
 				<li><a href="../inquiry/"><span class="icon_img"><span class="lsf">&#xe08a;</span></span><span class="icon_label"><span class="title">メールでのご相談</span><div>お問い合わせフォーム</div></span></a></li>
@@ -71,8 +71,8 @@
 	<!--/Navigation--> 
 	
 	<!-- MainImage -->
-	<h1 id="main_image" class="row width_a columns"><img class="scale-with-grid round" src="../assets/templates/kanipunch/images/sub_img.gif" alt="事業案内" /></h1>
-	<!-- /MainImage --> 
+	<div id="main_image" class="row width_a columns"><img src="../assets/templates/kanipunch/images/sub_img.gif" alt="事業案内" /></div>
+	<!-- /MainImage -->
 	
 	<!-- Sidebar -->
 	<div id="sidebar" class="width_c columns">
