--- a/service/index.html
+++ b/service/index.html
@@ -79,7 +79,7 @@
 		<div class="sidemenu">
 			<ul>
 				<li><a href="../index.html">HOME</a></li>
-				<li class="active"><a href="../company/">企業情報</a>
+				<li><a href="../company/">企業情報</a>
 					<ul>
 						<li><a href="../company/">企業情報01</a></li>
 						<li><a href="../company/">企業情報02</a></li>
