--- a/product/index.html
+++ b/product/index.html
@@ -32,8 +32,8 @@
 		<div class="inner">
 			<h1 id="site-title"><a href="../index.html">MODX</a></h1>
 			<ul class="clearfix">
-				<li><a href="tel:0123456789"><span class="icon_img"><span class="lsf">&#xe100;</span></span><span class="icon_label"><span class="title">お電話でのご相談</span><span class="number">0120-345-678</span><span class="opentime">受付時間：月～金　9:00～18:00</span></span></a></li>
-				<li><a href="../inquiry/"><span class="icon_img"><span class="lsf">&#xe08a;</span></span><span class="icon_label"><span class="title">メールでのご相談</span><div>お問い合わせフォーム</div></span></a></li>
+				<li><a href="tel:0123456789"><span class="icon_img"><img src="../assets/templates/kanipunch/images/header_inquiry01.png" title="お電話でのご相談"></span><span class="icon_label"><span class="title">お電話でのご相談</span><span class="number">0120-345-678</span><span class="opentime">受付時間：月～金　9:00～18:00</span></span></a></li>
+				<li><a href="../inquiry/"><span class="icon_img"><img src="../assets/templates/kanipunch/images/header_inquiry02.png" title="メールでのご相談"></span><span class="icon_label"><span class="title">メールでのご相談</span><div>お問い合わせフォーム</div></span></a></li>
 			</ul>
 		</div>
 	</header>
@@ -79,7 +79,7 @@
 		<div class="sidemenu">
 			<ul>
 				<li><a href="../index.html">HOME</a></li>
-				<li class="active"><a href="../company/">企業情報</a>
+				<li><a href="../company/">企業情報</a>
 					<ul>
 						<li><a href="../company/">企業情報01</a></li>
 						<li><a href="../company/">企業情報02</a></li>
@@ -146,8 +146,8 @@
 				<p>サービス内容についてのお問い合わせ・ご相談は電話とメールにて承っております</p>
 			</div>
 			<ul class="clearfix">
-				<li id="inquiry_tel"><a href="tel:0123456789" class="clearfix"><span class="icon_img"><span class="lsf">&#xe100;</span></span><span class="icon_label"><span class="title">お電話でのご相談</span><span class="number">0120-345-678</span><span class="opentime">受付時間：月～金　9:00～18:00</span></span></a></li>
-				<li id="inquiry_mail"><a href="../inquiry/" class="clearfix"><span class="icon_img"><span class="lsf">&#xe08a;</span></span><span class="icon_label"><span class="title">メールでのご相談</span><div>お問い合わせフォーム</div></span></a></li>
+				<li id="inquiry_tel"><a href="tel:0123456789" class="clearfix"><span class="icon_img"><img src="../assets/templates/kanipunch/images/inquiry_banner_tel_btn.png" title="お電話でのご相談"></span><span class="icon_label"><span class="title">お電話でのご相談</span><span class="number">0120-345-678</span><span class="opentime">受付時間：月～金　9:00～18:00</span></span></a></li>
+				<li id="inquiry_mail"><a href="../inquiry/" class="clearfix"><span class="icon_img"><img src="../assets/templates/kanipunch/images/inquiry_banner_mail_btn.png" title="メールでのご相談"></span><span class="icon_label"><span class="title">メールでのご相談</span><div>お問い合わせフォーム</div></span></a></li>
 			</ul>
 		</div>
 		<!-- /Inquiry -->
@@ -207,9 +207,9 @@
 					<dd>〒000-0000　住所をここに入力してください住所をここに入力してください<br />TEL : 000-000-0000　FAX : 000-000-0000<br>URL : <a href="http://www.kanipunch.com/" target="_blank">http://www.kanipunch.com/</a></dd>
 				</dl>
 				<ul id="sns_icon" class="clearfix">
-					<li><a href="https://twitter.com/" title="Twitter"><span class="lsf">&#xe12f;</span></a></li>
-					<li><a href="https://www.facebook.com/" title="Facebook"><span class="lsf">&#xe047;</span></a></li>
-					<li><a href="#" title="RSS"><span class="lsf">&#xe113;</span></a></li>
+					<li><a href="https://twitter.com/" title="Twitter"><img src="../assets/templates/kanipunch/images/sns_circle01.png" alt="twitter"></a></li>
+					<li><a href="https://www.facebook.com/" title="Facebook"><img src="../assets/templates/kanipunch/images/sns_circle02.png" alt="facebook"></a></li>
+					<li><a href="#" target="_blank"><img src="../assets/templates/kanipunch/images/sns_circle03.png" alt="rss"></a></li>
 				</ul>
 			</div>
 		</div>
