--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <title>SAMPLE SITE</title>
-<!--[if lt IE 9]><script type="text/javascript" src="./assets/templates/kanipunch/javascripts/html5shiv.js"></script><script type="text/javascript" src="./assets/templates/kanipunch/javascripts/css3-mediaqueries.js"></script><![endif]-->
+<!--[if lt IE 10]><script type="text/javascript" src="./assets/templates/kanipunch/javascripts/html5shiv.js"></script><script type="text/javascript" src="./assets/templates/kanipunch/javascripts/css3-mediaqueries.js"></script><![endif]-->
 <!--[if lt IE 10]><script type="text/javascript" src="./assets/templates/kanipunch/javascripts/PIE.js"></script><![endif]-->
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 <link rel="shortcut icon" href="./assets/templates/kanipunch/images/favicon.ico">
@@ -69,7 +69,7 @@
 	<!--/Navigation--> 
 	
 	<!-- MainImage -->
-	<div id="main_image" class="row width_a columns"><img src="./assets/templates/kanipunch/images/main_img.jpg" alt="" /></div>
+	<div id="main_image" class="row width_a columns"><img class="scale-with-grid" src="./assets/templates/kanipunch/images/main_img.jpg" alt="" /></div>
 	<!-- /MainImage --> 
 	
 	<!-- Sidebar -->
