--- a/index.html
+++ b/index.html
@@ -44,22 +44,22 @@
 				<li class="active"><a href="./index.html">HOME</a></li>
 				<li><a href="./company/">企業情報</a>
 					<ul>
-						<li><a href="./company/">企業情報01</a></li>
-						<li><a href="./company/">企業情報02</a></li>
-						<li><a href="./company/">企業情報03</a></li>
+						<li><a href="./company/index1.html">企業情報01</a></li>
+						<li><a href="./company/index2.html">企業情報02</a></li>
+						<li><a href="./company/index3.html">企業情報03</a></li>
 					</ul>
 				</li>
 				<li><a href="./service/">事業案内</a>
 					<ul>
-						<li><a href="./service/">事業案内01</a></li>
-						<li><a href="./service/">事業案内02</a></li>
-						<li><a href="./service/">事業案内03</a></li>
+						<li><a href="./service/index1.html">事業案内01</a></li>
+						<li><a href="./service/index2.html">事業案内02</a></li>
+						<li><a href="./service/index3.html">事業案内03</a></li>
 					</ul>
 				</li>
-				<li><a href="./product/">製品情報</a>
+				<li><a href="../product/">製品情報</a>
 					<ul>
-						<li><a href="./product/">製品情報01</a></li>
-						<li><a href="./product/">製品情報02</a></li>
+						<li><a href="./product/index1.html">製品情報01</a></li>
+						<li><a href="./product/index2.html">製品情報02</a></li>
 					</ul>
 				</li>
 				<li><a href="./inquiry/">お問い合わせ</a></li>
@@ -79,22 +79,22 @@
 				<li class="active"><a href="./index.html">HOME</a></li>
 				<li><a href="./company/">企業情報</a>
 					<ul>
-						<li><a href="./company/">企業情報01</a></li>
-						<li><a href="./company/">企業情報02</a></li>
-						<li><a href="./company/">企業情報03</a></li>
+						<li><a href="./company/index1.html">企業情報01</a></li>
+						<li><a href="./company/index2.html">企業情報02</a></li>
+						<li><a href="./company/index3.html">企業情報03</a></li>
 					</ul>
 				</li>
 				<li><a href="./service/">事業案内</a>
 					<ul>
-						<li><a href="./service/">事業案内01</a></li>
-						<li><a href="./service/">事業案内02</a></li>
-						<li><a href="./service/">事業案内03</a></li>
+						<li><a href="./service/index1.html">事業案内01</a></li>
+						<li><a href="./service/index2.html">事業案内02</a></li>
+						<li><a href="./service/index3.html">事業案内03</a></li>
 					</ul>
 				</li>
-				<li><a href="./product/">製品情報</a>
+				<li><a href="../product/">製品情報</a>
 					<ul>
-						<li><a href="./product/">製品情報01</a></li>
-						<li><a href="./product/">製品情報02</a></li>
+						<li><a href="./product/index1.html">製品情報01</a></li>
+						<li><a href="./product/index2.html">製品情報02</a></li>
 					</ul>
 				</li>
 				<li><a href="./inquiry/">お問い合わせ</a></li>
@@ -148,7 +148,7 @@
 				<article>
 					<h2><span>ライセンスについて</span></h2>
 					<div class="inner_box">
-						<p>このテーマはMITライセンスの下で使用と改変は自由です。<br />ライセンスの詳細はこちら：<a href="http://www.opensource.org/licenses/mit-license.php" target="_blank">http://www.opensource.org/licenses/mit-license.php</a></p>
+						<p>このテーマはMITライセンスの下で使用と改変は自由です。<br />ライセンスの詳細は<a href="http://www.opensource.org/licenses/mit-license.php" target="_blank">こちら</a></p>
 					</div>
 				</article>
 				<article>
