--- a/inquiry/index.html
+++ b/inquiry/index.html
@@ -46,22 +46,22 @@
 				<li><a href="../index.html">HOME</a></li>
 				<li><a href="../company/">企業情報</a>
 					<ul>
-						<li><a href="../company/">企業情報01</a></li>
-						<li><a href="../company/">企業情報02</a></li>
-						<li><a href="../company/">企業情報03</a></li>
+						<li><a href="../company/index1.html">企業情報01</a></li>
+						<li><a href="../company/index2.html">企業情報02</a></li>
+						<li><a href="../company/index3.html">企業情報03</a></li>
 					</ul>
 				</li>
 				<li><a href="../service/">事業案内</a>
 					<ul>
-						<li><a href="../service/">事業案内01</a></li>
-						<li><a href="../service/">事業案内02</a></li>
-						<li><a href="../service/">事業案内03</a></li>
+						<li><a href="../service/index1.html">事業案内01</a></li>
+						<li><a href="../service/index2.html">事業案内02</a></li>
+						<li><a href="../service/index3.html">事業案内03</a></li>
 					</ul>
 				</li>
 				<li><a href="../product/">製品情報</a>
 					<ul>
-						<li><a href="../product/">製品情報01</a></li>
-						<li><a href="../product/">製品情報02</a></li>
+						<li><a href="../product/index1.html">製品情報01</a></li>
+						<li><a href="../product/index2.html">製品情報02</a></li>
 					</ul>
 				</li>
 				<li class="active"><a href="../inquiry/">お問い合わせ</a></li>
@@ -71,7 +71,7 @@
 	<!--/Navigation--> 
 	
 	<!-- MainImage -->
-	<div id="main_image" class="row width_a columns"><img src="../assets/templates/kanipunch/images/sub_img.gif" alt="企業情報01" /></div>
+	<div id="main_image" class="row width_a columns"><img class="scale-with-grid" src="../assets/templates/kanipunch/images/sub_img.gif" alt="企業情報01" /></div>
 	<!-- /MainImage -->
 	
 	<!-- Sidebar -->
@@ -81,22 +81,22 @@
 				<li><a href="../index.html">HOME</a></li>
 				<li><a href="../company/">企業情報</a>
 					<ul>
-						<li><a href="../company/">企業情報01</a></li>
-						<li><a href="../company/">企業情報02</a></li>
-						<li><a href="../company/">企業情報03</a></li>
+						<li><a href="../company/index1.html">企業情報01</a></li>
+						<li><a href="../company/index2.html">企業情報02</a></li>
+						<li><a href="../company/index3.html">企業情報03</a></li>
 					</ul>
 				</li>
 				<li><a href="../service/">事業案内</a>
 					<ul>
-						<li><a href="../service/">事業案内01</a></li>
-						<li><a href="../service/">事業案内02</a></li>
-						<li><a href="../service/">事業案内03</a></li>
+						<li><a href="../service/index1.html">事業案内01</a></li>
+						<li><a href="../service/index2.html">事業案内02</a></li>
+						<li><a href="../service/index3.html">事業案内03</a></li>
 					</ul>
 				</li>
 				<li><a href="../product/">製品情報</a>
 					<ul>
-						<li><a href="../product/">製品情報01</a></li>
-						<li><a href="../product/">製品情報02</a></li>
+						<li><a href="../product/index1.html">製品情報01</a></li>
+						<li><a href="../product/index2.html">製品情報02</a></li>
 					</ul>
 				</li>
 				<li class="active"><a href="../inquiry/">お問い合わせ</a></li>
