--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 						<li><a href="./service/index3.html">事業案内03</a></li>
 					</ul>
 				</li>
-				<li><a href="../product/">製品情報</a>
+				<li><a href="./product/">製品情報</a>
 					<ul>
 						<li><a href="./product/index1.html">製品情報01</a></li>
 						<li><a href="./product/index2.html">製品情報02</a></li>
@@ -91,7 +91,7 @@
 						<li><a href="./service/index3.html">事業案内03</a></li>
 					</ul>
 				</li>
-				<li><a href="../product/">製品情報</a>
+				<li><a href="./product/">製品情報</a>
 					<ul>
 						<li><a href="./product/index1.html">製品情報01</a></li>
 						<li><a href="./product/index2.html">製品情報02</a></li>
